--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,21 +15,21 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
-    
+
     - name: Install uv
       uses: astral-sh/setup-uv@v3
       with:
         version: latest
-    
+
     - name: Install dependencies
       run: |
-        uv pip install -e ".[dev]"
-    
+        uv pip install -e ".[dev]" --system
+
     - name: Verify dataset checksums
       env:
         BICAM_SECRET_KEY: ${{ secrets.BICAM_SECRET_KEY }}
@@ -37,20 +37,20 @@ jobs:
       run: |
         python scripts/verify_checksums.py
       continue-on-error: true
-    
+
     - name: Run linting
       run: |
         uv run ruff check bicam/ tests/ scripts/*.py
         uv run black --check bicam/ tests/ scripts/*.py
-    
+
     - name: Run type checking
       run: |
         uv run mypy bicam/
-    
+
     - name: Run tests
       run: |
         uv run pytest tests/ -v --cov=bicam --cov-report=xml
-    
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
@@ -61,10 +61,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    
+
     steps:
     - uses: actions/checkout@v4
-    
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -77,7 +77,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        uv pip install -e ".[dev]"
+        uv pip install -e ".[dev]" --system
 
     - name: Build package
       run: |
@@ -88,7 +88,7 @@ jobs:
         uv build
         rm -f bicam/_auth.py
       continue-on-error: true
-    
+
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
       with:
