--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,7 @@ jobs:
     - name: Run linting
       run: |
         uv run ruff check bicam/ tests/ scripts/*.py
-        uv run black --check bicam/ tests/ scripts/*.py
+        uv run ruff format --check bicam/ tests/ scripts/*.py
 
     - name: Run type checking
       run: |
@@ -98,7 +98,7 @@ jobs:
       continue-on-error: true
 
     - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: dist
         path: dist/
