--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,9 +92,19 @@ jobs:
         # Create dummy credentials for build
         export BICAM_SECRET_KEY=dummy_secret
         export BICAM_CREDENTIAL_ENDPOINT=https://dummy.execute-api.region.amazonaws.com/prod/get-credentials
+
+        # Create required .env files for build script
+        mkdir -p scripts/credentials
+        echo "BICAM_SECRET_KEY=dummy_secret" > scripts/credentials/.env
+        echo "BICAM_CREDENTIAL_ENDPOINT=https://dummy.execute-api.region.amazonaws.com/prod/get-credentials" >> scripts/credentials/.env
+
+        # Create root .env file for PyPI token (dummy for build)
+        echo "PYPI_API_TOKEN=dummy_token" > .env
+
         python scripts/credentials/3_build_credentials.py
         uv build
         rm -f bicam/_auth.py
+        rm -f .env
       continue-on-error: true
 
     - name: Upload build artifacts
