--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,10 +39,17 @@ jobs:
         BICAM_CREDENTIAL_ENDPOINT: ${{ secrets.BICAM_CREDENTIAL_ENDPOINT }}
         PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
       run: |
-        # Create .env file for build script
-        echo "BICAM_SECRET_KEY=${{ secrets.BICAM_SECRET_KEY }}" > .env
-        echo "BICAM_CREDENTIAL_ENDPOINT=${{ secrets.BICAM_CREDENTIAL_ENDPOINT }}" >> .env
-        echo "PYPI_API_TOKEN=${{ secrets.PYPI_API_TOKEN }}" >> .env
+        # Create required .env files for build script
+        mkdir -p scripts/credentials
+        echo "BICAM_SECRET_KEY=${{ secrets.BICAM_SECRET_KEY }}" > scripts/credentials/.env
+        echo "BICAM_CREDENTIAL_ENDPOINT=${{ secrets.BICAM_CREDENTIAL_ENDPOINT }}" >> scripts/credentials/.env
+
+        # Create root .env file for PyPI token
+        echo "PYPI_API_TOKEN=${{ secrets.PYPI_API_TOKEN }}" > .env
 
         # Build and publish
         ./scripts/build_and_publish.sh --publish
+
+        # Clean up
+        rm -f .env
+        rm -f scripts/credentials/.env
