--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,7 @@ dev = [
     "black>=24.8.0",
     "moto>=5.0.28",
     "mypy>=1.14.1",
+    "pre-commit>=3.5.0",
     "pytest>=8.3.5",
     "pytest-cov>=5.0.0",
     "pytest-mock>=3.14.1",
