--- a/bicam/_auth.py.template
+++ b/bicam/_auth.py.template
@@ -4,7 +4,7 @@ import hashlib
 import json
 from datetime import datetime, timedelta, timezone
 from functools import lru_cache
-from typing import Dict, Any
+from typing import Any, Dict
 
 import boto3
 import requests
