--- a/bicam/_auth.py.template
+++ b/bicam/_auth.py.template
@@ -76,16 +76,16 @@ def _fetch_credentials() -> Dict[str, Any]:
                 error_msg += f" - {error_data.get('error', 'Unknown error')}"
             except json.JSONDecodeError:
                 error_msg += f" - {response.text}"
-            raise Exception(error_msg) from response
+            raise RuntimeError(error_msg) from None
 
         data: Dict[str, Any] = response.json()
         credentials: Dict[str, Any] = data["credentials"]
         return credentials
 
     except requests.exceptions.RequestException as e:
-        raise Exception(f"Failed to connect to credential server: {str(e)}") from e
+        raise RuntimeError(f"Failed to connect to credential server: {str(e)}") from e
     except (KeyError, json.JSONDecodeError) as e:
-        raise Exception(f"Invalid response from credential server: {str(e)}") from e
+        raise RuntimeError(f"Invalid response from credential server: {str(e)}") from e
 
 
 @lru_cache(maxsize=1)
