--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.1"
 description = "BICAM Dataset Downloader - Access comprehensive congressional data"
 readme = "README.md"
 requires-python = ">=3.8"
-license = "MIT"
+license = { text = "MIT" }
 authors = [
     {name = "Ryan Delano", email = "bicam.data@gmail.com"},
 ]
@@ -19,6 +19,7 @@ keywords = ["congress", "legislation", "political-science", "dataset", "governme
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
